# zardinolab

./: .gitignore  README.md  pyproject.toml
examples/: basic_pipeline.py
src/zardinolab/: __init__.py  cli.py
src/zardinolab/composers/: __init__.py  pipeline.py
src/zardinolab/core/: events.py  score.py
src/zardinolab/exporters/: __init__.py  musicxml.py
src/zardinolab/generators/: __init__.py  pitch.py  rhythm.py
src/zardinolab/models/: __init__.py  cellular.py  chaos.py  grammar.py  markov.py
tests/: test_markov.py  test_multi_staff_heterogeneous.py  test_multi_staff_pipeline.py  test_pipeline.py  test_rhythm.py
