[build-system]
requires = ["setuptools==69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zardinolab"
version = "0.1.0"
description = "Algorithmic composition toolkit combining stochastic, chaotic, cellular automata and grammar-based methods."
readme = "README.md"
requires-python = ">=3.10"


authors = [
    { name = "Brian Martínez-Rodríguez", email = "info@brianmartinez.music" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.24",
    "music21>=9.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/BrianComposer/zardinolab"
Repository = "https://github.com/BrianComposer/zardinolab"

[project.scripts]
zardinolab = "zardinolab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]